resource relative path change

--- a/com.prairie.eevernote/src/com/prairie/eevernote/oauth/impl/html/callback.html
+++ b/com.prairie.eevernote/src/com/prairie/eevernote/oauth/impl/html/callback.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Eemory</title>
-<link rel="shortcut icon" href="icons/plugin_16x16.ico" />
+<link rel="shortcut icon" href="/icons/plugin_16x16.ico" />
 
 </head>
 
@@ -20,7 +20,7 @@
       <table width="450" style="background: #F6F4F4; border: 1px solid #A8ADAD; padding: 20px;">
        <tbody>
         <tr>
-         <td background="icons/plugin_32x32.png" style="background-repeat: no-repeat"><a href="https://github.com/prairie/Eemory" style="display: block; height: 48px;"></a></td>
+         <td background="/icons/plugin_32x32.png" style="background-repeat: no-repeat"><a href="https://github.com/prairie/Eemory" style="display: block; height: 48px;"></a></td>
         </tr>
        </tbody>
       </table>
