--- a/com.prairie.eevernote/src/com/prairie/eevernote/oauth/impl/html/nottarget.html
+++ b/com.prairie.eevernote/src/com/prairie/eevernote/oauth/impl/html/nottarget.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Eemory</title>
-<link rel="shortcut icon" href="icons/plugin_16x16.ico" />
+<link rel="shortcut icon" href="/icons/plugin_16x16.ico" />
 <style>
 body {
 	font: 16px Helvetica, Arial, Sans-serif;
