--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <hr>
 
         <section id="main_content">
-          <h3>
-<a id="eemory---connect-eclipse-with-evernote" class="anchor" href="#eemory---connect-eclipse-with-evernote" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eemory - Connect Eclipse with Evernote</h3>
+          <h2>
+<a id="connect-eclipse-with-evernote" class="anchor" href="#connect-eclipse-with-evernote" aria-hidden="true"><span class="octicon octicon-link"></span></a>Connect Eclipse with Evernote</h2>
 
 <p>Eemory is an Eclipse Plug-in aimed at integrating Evernote within the Eclipse IDE.</p>
 
@@ -74,7 +74,7 @@
 <li>Install from <a href="https://github.com/prairie/Eemory/releases">archived update site</a> locally.</li>
 </ul>
 
-<p>Please check out this <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> for more information, or go to <a href="http://dl.bintray.com/prairie/eemory-update-site">Eclipse Marketplace</a> website.</p>
+<p>New to Eclipse plug-in? Please check out this <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> for more information, or go to <a href="http://dl.bintray.com/prairie/eemory-update-site">Eclipse Marketplace</a> website.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
