--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h2>
 <a id="connect-eclipse-with-evernote" class="anchor" href="#connect-eclipse-with-evernote" aria-hidden="true"><span class="octicon octicon-link"></span></a>Connect Eclipse with Evernote</h2>
 
-<p>Eemory is an Eclipse Plug-in aimed at integrating Evernote within the Eclipse IDE.</p>
+<p>Eemory is an Eclipse plug-in aimed at integrating Evernote within the Eclipse IDE.</p>
 
 <p>I love Evernote, but every time I want to save something to Evernote, I have to switch between Eclipse IDE and Evernote client, copy sometihng and paste, then go back to Eclipse and continue on my work. This is heavy and boring, so Eemory was born, which bring the benefits offered by Evernote into Eclipse. No need to open Evernote client anymore to add a note, just select something and one-click to save to Evernote elegantly. And you will find you are still in Eclipse.</p>
 
@@ -74,7 +74,7 @@
 <li>Install from <a href="https://github.com/prairie/Eemory/releases">archived update site</a> locally.</li>
 </ul>
 
-<p>New to Eclipse plug-in? Please check out this <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> for more information, or go to <a href="http://dl.bintray.com/prairie/eemory-update-site">Eclipse Marketplace</a> website.</p>
+<p>New to Eclipse plug-in? Please check out this <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> for complete instructions, or go to <a href="http://dl.bintray.com/prairie/eemory-update-site">Eclipse Marketplace</a> website for more information.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
