Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Eemory? Check out the <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> or file an issue <a href="https://github.com/prairie/Eemory/issues">here</a>, your request will be picked up and handled.</p>
+<p>Having problems, questions, ideas or suggestions? Check out the <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> or file an issue <a href="https://github.com/prairie/Eemory/issues">here</a>, your request will be picked up and handled.</p>
         </section>
 
         <footer>
