update callback page

--- a/com.prairie.eemory/src/com/prairie/eemory/oauth/impl/html/callback.html
+++ b/com.prairie.eemory/src/com/prairie/eemory/oauth/impl/html/callback.html
@@ -20,7 +20,7 @@
       <table width="450" style="background: #F6F4F4; border: 1px solid #A8ADAD; padding: 20px;">
        <tbody>
         <tr>
-         <td background="/plugin_32x32.png" style="background-repeat: no-repeat"><a href="//github.com/prairie/Eemory" style="display: block; height: 48px;"></a></td>
+         <td background="/plugin_172x56.png" style="background-repeat: no-repeat"><a href="//prairie.github.io/Eemory" style="display: block; height: 56px;"></a></td>
         </tr>
        </tbody>
       </table>
@@ -38,14 +38,14 @@
         <tr>
          <td style="padding: 0px; font-size: 13px; line-height: 18px; padding-left: 20px; padding-right: 20px;">
           <div>
-           Visit <a href="//github.com/prairie/Eemory">Home</a> of Eemory.
+           Visit <a href="//prairie.github.io/Eemory">Eemory Home</a>.
           </div>
          </td>
         </tr>
         <tr>
          <td style="padding: 0px; font-size: 13px; line-height: 18px; padding-left: 20px; padding-right: 20px;">
           <div>
-           Visit <a href="//github.com/prairie/Eemory">source</a> on GitHub.
+           Visit <a href="//github.com/prairie/Eemory">Eemory</a> on GitHub.
           </div>
          </td>
         </tr>
