--- a/com.prairie.eemory/src/com/prairie/eemory/oauth/impl/html/callback_err.html
+++ b/com.prairie.eemory/src/com/prairie/eemory/oauth/impl/html/callback_err.html
@@ -20,7 +20,7 @@
       <table width="450" style="background: #F6F4F4; border: 1px solid #A8ADAD; padding: 20px;">
        <tbody>
         <tr>
-         <td background="/plugin_32x32.png" style="background-repeat: no-repeat"><a href="//github.com/prairie/Eemory" style="display: block; height: 48px;"></a></td>
+         <td background="/plugin_172x56.png" style="background-repeat: no-repeat"><a href="//prairie.github.io/Eemory" style="display: block; height: 56px;"></a></td>
         </tr>
        </tbody>
       </table>
@@ -30,7 +30,7 @@
          <td style="padding: 0px; color: #3B3B3B; font-size: 13px; line-height: 18px; padding-left: 20px; padding-right: 20px; padding-top: 20px; padding-bottom: 20px;">
           <div>
            <p style="font-family: Helvetica, Arial, Verdana, sans-serif; font-weight: 400; margin: 0px 0px 12px 0px;">
-            <strong style="color: #F24858;">SOMETHING WRONG ! </strong>Failed to get verifier from Evernote's response. You can close this window.
+            <strong style="color: #E10601;">SOMETHING WRONG ! </strong>Failed to get verifier from Evernote's response. You can close this window.
            </p>
           </div>
          </td>
@@ -38,7 +38,7 @@
         <tr>
          <td style="padding: 0px; color: #3B3B3B; font-size: 13px; line-height: 18px; padding-left: 20px; padding-right: 20px;">
           <div>
-           Please just do the same thing as you did to start this process and try again.
+           Please just do the same thing as you did to start this process and try again. If this issue persist, please <a href="//prairie.github.io/Eemory">contact support</a>.
           </div>
          </td>
         </tr>
