--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <p>I love Evernote, but every time I want to save something to Evernote, I have to switch between Eclipse IDE and Evernote client, copy sometihng and paste, then go back to Eclipse and continue on my work. This is heavy and boring, so Eemory was born, which bring the benefits offered by Evernote into Eclipse. No need to open Evernote client anymore to add a note, just select something and one-click to save to Evernote elegantly. And you will find you are still in Eclipse.</p>
 
-<p><img src="https://raw.githubusercontent.com/prairie/Eemory/master/com.prairie.eemory/doc/eclipse-screenshot.png" alt="screenshot"></p>
+<p><img src="https://raw.githubusercontent.com/prairie/Eemory/master/com.prairie.eemory/res/plugin-screenshot.png" alt="plugin screenshot"></p>
 
 <h3>
 <a id="feature-includes" class="anchor" href="#feature-includes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Feature includes</h3>
