--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <p>There are three approaches you can choose:</p>
 
 <ul>
-<li>Install from Eclipse Marketplace in Eclipse(recommended).</li>
+<li>Install from Eclipse Marketplace within Eclipse(recommended).</li>
 <li>Install from update site URL: <code>http://dl.bintray.com/prairie/eemory-update-site</code>.</li>
 <li>Install from <a href="https://github.com/prairie/Eemory/releases">archived update site</a> locally.</li>
 </ul>
