--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <li>Install from <a href="https://github.com/prairie/Eemory/releases">archived update site</a> locally.</li>
 </ul>
 
-<p>New to Eclipse plug-in? Please check out this <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> for complete instructions, or go to <a href="http://dl.bintray.com/prairie/eemory-update-site">Eclipse Marketplace</a> website for more information.</p>
+<p>New to Eclipse plug-in? Please check out this <a href="https://github.com/prairie/Eemory/wiki/Installation-instructions">Wiki</a> for complete instructions, or go to <a href="http://marketplace.eclipse.org/content/eemory">Eclipse Marketplace</a> website for more information.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
@@ -84,7 +84,7 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having problems, questions, ideas or suggestions? Check out the <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> or file an issue <a href="https://github.com/prairie/Eemory/issues">here</a>, your request will be picked up and handled.</p>
+<p>Having problems, questions, ideas or suggestions? Check out the <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> or file a ticket <a href="https://github.com/prairie/Eemory/issues">here</a>, your request will be picked up and handled.</p>
         </section>
 
         <footer>
