--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
 <ul>
 <li>Adding code snippet, source file, screenshot and more to a new note on Evernote.</li>
-<li>Appending code snippet, source file, screenshot and more to an existing note on Evernote.</li>
-<li>Adding/Appending multiple files once.</li>
+<li>Prepending code snippet, source file, screenshot and more to an existing note on Evernote.</li>
+<li>Adding/Prepending multiple files once.</li>
 <li>Notebook, Note and Tag can be specified(no need to remember their names, we have auto-suggestion) beforehand or in runtime.</li>
 <li>Also can add a comment for each clip.</li>
 <li>Syntax highlighting for any language on Evernote just like what you see in Eclipse.</li>
