--- a/com.prairie.eemory/src/com/prairie/eemory/oauth/impl/html/callback_err.html
+++ b/com.prairie.eemory/src/com/prairie/eemory/oauth/impl/html/callback_err.html
@@ -38,7 +38,7 @@
         <tr>
          <td style="padding: 0px; color: #3B3B3B; font-size: 13px; line-height: 18px; padding-left: 20px; padding-right: 20px;">
           <div>
-           Please just do the same thing as you did to start this process and try again. If this issue persist, please <a href="//prairie.github.io/Eemory">contact support</a>.
+           Please just do the same thing as you did to start this process and try again. If the problem persists, please file a ticket <a href="//github.com/prairie/Eemory/issues">here</a>.
           </div>
          </td>
         </tr>
