--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section id="main_content">
           <h2>
-<a id="connect-eclipse-with-evernote" class="anchor" href="#connect-eclipse-with-evernote" aria-hidden="true"><span class="octicon octicon-link"></span></a>Connect Eclipse with Evernote</h2>
+<a id="connect-eclipse-with-evernote" class="anchor" href="#connect-eclipse-with-evernote" aria-hidden="true"><span class="octicon octicon-link"></span></a>Connect Eclipse and Evernote</h2>
 
 <p>Eemory is an Eclipse plug-in aimed at integrating Evernote within the Eclipse IDE.</p>
 
