fix bug #33 and some other changes

--- a/com.prairie.eemory/src/com/prairie/eemory/oauth/impl/html/callback_err.html
+++ b/com.prairie.eemory/src/com/prairie/eemory/oauth/impl/html/callback_err.html
@@ -30,7 +30,7 @@
          <td style="padding: 0px; color: #3B3B3B; font-size: 13px; line-height: 18px; padding-left: 20px; padding-right: 20px; padding-top: 20px; padding-bottom: 20px;">
           <div>
            <p style="font-family: Helvetica, Arial, Verdana, sans-serif; font-weight: 400; margin: 0px 0px 12px 0px;">
-            <strong style="color: #E10601;">SOMETHING WRONG ! </strong>Failed to get verifier from Evernote's response. You can close this window.
+            <strong style="color: #E10601; font-size: 16px;">SOMETHING WRONG ! </strong>Failed to get verifier from Evernote's response. You can close this window.
            </p>
           </div>
          </td>
@@ -38,7 +38,7 @@
         <tr>
          <td style="padding: 0px; color: #3B3B3B; font-size: 13px; line-height: 18px; padding-left: 20px; padding-right: 20px;">
           <div>
-           Please just do the same thing as you did to start this process and try again. If the problem persists, please file a ticket <a href="//github.com/prairie/Eemory/issues">here</a>.
+           Please do the same thing as you did to start this process and try again. If the problem persists, please file a ticket <a href="//github.com/prairie/Eemory/issues">here</a>.
           </div>
          </td>
         </tr>
