--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 <a id="feature-includes" class="anchor" href="#feature-includes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Feature includes</h3>
 
 <ul>
-<li>Adding code snippet, source file, screenshot and more to a new note on Evernote.</li>
-<li>Prepending code snippet, source file, screenshot and more to an existing note on Evernote.</li>
-<li>Adding/Prepending multiple files once.</li>
-<li>Notebook, Note and Tag can be specified(no need to remember their names, we have auto-suggestion) beforehand or in runtime.</li>
+<li>Adding code snippet, source file, screenshot and more to a new note.</li>
+<li>Prepending code snippet, source file, screenshot and more to an existing note.</li>
+<li>Adding/Prepending multiple files at once.</li>
+<li>Notebook(including notebook shared by other people), Note and Tag can be specified beforehand or in runtime.</li>
 <li>Also can add a comment for each clip.</li>
 <li>Syntax highlighting for any language on Evernote just like what you see in Eclipse.</li>
 <li>Authentication is delegated to Eemory using the OAuth protocol. One-click OAuth authentication as easy to use as a web application did.</li>
