--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 <li>Prepending code snippet, source file, screenshot and more to an existing note.</li>
 <li>Adding/Prepending multiple files at once.</li>
 <li>Notebook(including notebook shared by other people), Note and Tag can be specified beforehand or in runtime.</li>
-<li>Also can add a comment for each clip.</li>
+<li>Comment can be added for each clip.</li>
 <li>Syntax highlighting for any language on Evernote just like what you see in Eclipse.</li>
-<li>Authentication is delegated to Eemory using the OAuth protocol. One-click OAuth authentication as easy to use as a web application did.</li>
+<li>One-click OAuth authorization.</li>
 </ul>
 
 <h3>
