--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 <p>There are three approaches you can choose:</p>
 
 <ul>
-<li>Install from Eclipse Marketplace within Eclipse(recommended).</li>
-<li>Install from update site URL: <code>http://dl.bintray.com/prairie/eemory-update-site</code>.</li>
-<li>Install from <a href="https://github.com/prairie/Eemory/releases">archived update site</a> locally.</li>
+<li>Install via Eclipse Marketplace within Eclipse(recommended).</li>
+<li>Install via update site URL: <code>http://dl.bintray.com/prairie/eemory-update-site</code>.</li>
+<li>Install via <a href="https://github.com/prairie/Eemory/releases">archived update site</a> locally.</li>
 </ul>
 
 <p>New to Eclipse plug-in? Please check out this <a href="https://github.com/prairie/Eemory/wiki/Installation-instructions">Wiki</a> for complete instructions, or go to <a href="http://marketplace.eclipse.org/content/eemory">Eclipse Marketplace</a> website for more information.</p>
