--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <h4>
 <a id="eemory-100-beta-requires-jdk-16" class="anchor" href="#eemory-100-beta-requires-jdk-16" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eemory 1.0.0-beta (requires JDK 1.6+)</h4>
 
-<p>Eemory 1.0.0-beta is the latest version and requires a minimum of JDK 1.6.</p>
+<p>Eemory 1.0.0 is the latest version and requires Java 7+.</p>
 
 <p>View <a href="https://github.com/prairie/Eemory/blob/master/README.md">Readme</a> and <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> for limits and more information.</p>
 
