--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
         <section id="main_content">
           <h2>
-<a id="connect-eclipse-with-evernote" class="anchor" href="#connect-eclipse-with-evernote" aria-hidden="true"><span class="octicon octicon-link"></span></a>Connect Eclipse and Evernote</h2>
+<a id="connect-eclipse-and-evernote" class="anchor" href="#connect-eclipse-and-evernote" aria-hidden="true"><span class="octicon octicon-link"></span></a>Connect Eclipse and Evernote</h2>
 
 <p>Eemory is an Eclipse plug-in aimed at integrating Evernote within the Eclipse IDE.</p>
 
 <p>I love Evernote, but every time I want to save something to Evernote, I have to switch between Eclipse IDE and Evernote client, copy sometihng and paste, then go back to Eclipse and continue on my work. This is heavy and boring, so Eemory was born, which bring the benefits offered by Evernote into Eclipse. No need to open Evernote client anymore to add a note, just select something and one-click to save to Evernote right in Eclipse elegantly.</p>
 
-<p><img src="https://raw.githubusercontent.com/prairie/Eemory/master/com.prairie.eemory/res/plugin-screenshot.png" alt="plugin screenshot"></p>
+<p><img src="https://raw.githubusercontent.com/prairie/Eemory/master/com.prairie.eemory/res/plugin-screenshot.png" alt="screenshot"></p>
 
 <h3>
 <a id="feature-includes" class="anchor" href="#feature-includes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Feature includes</h3>
@@ -57,7 +57,7 @@
 <a id="releases" class="anchor" href="#releases" aria-hidden="true"><span class="octicon octicon-link"></span></a>Releases</h3>
 
 <h4>
-<a id="eemory-100-beta-requires-jdk-16" class="anchor" href="#eemory-100-beta-requires-jdk-16" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eemory 1.0.0-beta (requires JDK 1.6+)</h4>
+<a id="eemory-100-requires-java-7" class="anchor" href="#eemory-100-requires-java-7" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eemory 1.0.0 (requires Java 7+)</h4>
 
 <p>Eemory 1.0.0 is the latest version and requires Java 7+.</p>
 
@@ -74,7 +74,7 @@
 <li>Install via <a href="https://github.com/prairie/Eemory/releases">archived update site</a> locally.</li>
 </ul>
 
-<p>New to Eclipse plug-in? Please check out this <a href="https://github.com/prairie/Eemory/wiki/Installation-instructions">Wiki</a> for complete instructions, or go to <a href="http://marketplace.eclipse.org/content/eemory">Eclipse Marketplace</a> website for more information.</p>
+<p>New to Eclipse plug-in? Please check out this <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> for complete instructions, or go to <a href="http://dl.bintray.com/prairie/eemory-update-site">Eclipse Marketplace</a> website for more information.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
