--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>In 2014, Jianwei Liu (<a href="https://github.com/liujienwei" class="user-mention">@liujienwei</a>) created Eemory.</p>
+<p>Jianwei Liu (<a href="https://github.com/liujienwei" class="user-mention">@liujienwei</a>)</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
