--- a/index.html
+++ b/index.html
@@ -31,60 +31,18 @@
         <hr>
 
         <section id="main_content">
-          <h2>
-<a id="connect-eclipse-and-evernote" class="anchor" href="#connect-eclipse-and-evernote" aria-hidden="true"><span class="octicon octicon-link"></span></a>Connect Eclipse and Evernote</h2>
-
-<p>Eemory is an Eclipse plug-in aimed at integrating Evernote within the Eclipse IDE.</p>
-
-<p>I love Evernote, but every time I want to save something to Evernote, I have to switch between Eclipse IDE and Evernote client, copy sometihng and paste, then go back to Eclipse and continue on my work. This is heavy and boring, so Eemory was born, which bring the benefits offered by Evernote into Eclipse. No need to open Evernote client anymore to add a note, just select something and one-click to save to Evernote right in Eclipse elegantly.</p>
-
-<p><img src="https://raw.githubusercontent.com/prairie/Eemory/master/com.prairie.eemory/res/plugin-screenshot.png" alt="screenshot"></p>
+          <h1>
+<a id="privacy-policy" class="anchor" href="#privacy-policy" aria-hidden="true"><span class="octicon octicon-link"></span></a>Privacy Policy</h1>
 
 <h3>
-<a id="feature-includes" class="anchor" href="#feature-includes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Feature includes</h3>
+<a id="information-collection-and-usage" class="anchor" href="#information-collection-and-usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Information collection and usage</h3>
 
-<ul>
-<li>Adding code snippet, source file, screenshot and more to a new note.</li>
-<li>Prepending code snippet, source file, screenshot and more to an existing note.</li>
-<li>Adding/Prepending multiple files at once.</li>
-<li>Notebook(including notebook shared by other people), Note and Tag can be specified beforehand or in runtime.</li>
-<li>Comment can be added for each clip.</li>
-<li>Syntax highlighting for any language on Evernote just like what you see in Eclipse.</li>
-<li>One-click OAuth authorization.</li>
-</ul>
+<p>Eemory is a pure client App, and does not collect anything.</p>
 
 <h3>
-<a id="releases" class="anchor" href="#releases" aria-hidden="true"><span class="octicon octicon-link"></span></a>Releases</h3>
+<a id="information-security" class="anchor" href="#information-security" aria-hidden="true"><span class="octicon octicon-link"></span></a>Information security</h3>
 
-<h4>
-<a id="eemory-100-requires-eclipse-helios36-and-java-7" class="anchor" href="#eemory-100-requires-eclipse-helios36-and-java-7" aria-hidden="true"><span class="octicon octicon-link"></span></a>Eemory 1.0.0 (requires Eclipse Helios(3.6)+ and Java 7+)</h4>
-
-<p>Eemory 1.0.0 is the latest version and requires Eclipse Helios(3.6)+ and Java 7+.</p>
-
-<p>View <a href="https://github.com/prairie/Eemory/blob/master/README.md">Readme</a> and <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> for limits and more information.</p>
-
-<h3>
-<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h3>
-
-<p>There are three approaches you can choose:</p>
-
-<ul>
-<li>Install via Eclipse Marketplace within Eclipse(recommended).</li>
-<li>Install via update site URL: <code>http://dl.bintray.com/prairie/eemory-update-site</code>.</li>
-<li>Install via <a href="https://github.com/prairie/Eemory/releases">archived update site</a> locally.</li>
-</ul>
-
-<p>New to Eclipse plug-in? Please check out this <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> for complete instructions, or go to <a href="http://dl.bintray.com/prairie/eemory-update-site">Eclipse Marketplace</a> website for more information.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>Jianwei Liu (<a href="https://github.com/liujienwei" class="user-mention">@liujienwei</a>)</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having problems, questions, ideas or suggestions? Check out the <a href="https://github.com/prairie/Eemory/wiki">Wiki</a> or file a ticket <a href="https://github.com/prairie/Eemory/issues">here</a>, your request will be picked up and handled.</p>
+<p>In order to use Eemory you have to authorize it to access your Evernote account, which is done by OAuth. Once authorized, the generated authorization token will be encrypted and stored on your machine as Eclipse metadata. We won't reveal the authorization token to any others.</p>
         </section>
 
         <footer>
