--- a/com.lttpp.eemory/src/com/lttpp/eemory/oauth/impl/html/callback_err.html
+++ b/com.lttpp.eemory/src/com/lttpp/eemory/oauth/impl/html/callback_err.html
@@ -20,7 +20,7 @@
       <table width="450" style="background: #F6F4F4; border: 1px solid #A8ADAD; padding: 20px;">
        <tbody>
         <tr>
-         <td background="/plugin_172x56.png" style="background-repeat: no-repeat"><a href="//prairie.github.io/Eemory" style="display: block; height: 56px;"></a></td>
+         <td background="/plugin_172x56.png" style="background-repeat: no-repeat"><a href="//lttpp.github.io/Eemory" style="display: block; height: 56px;"></a></td>
         </tr>
        </tbody>
       </table>
@@ -38,7 +38,7 @@
         <tr>
          <td style="padding: 0px; color: #3B3B3B; font-size: 13px; line-height: 18px; padding-left: 20px; padding-right: 20px;">
           <div>
-           Please do the same thing as you did to start this process and try again. If the problem persists, please file a ticket <a href="//github.com/prairie/Eemory/issues">here</a>.
+           Please do the same thing as you did to start this process and try again. If the problem persists, please file a ticket <a href="//github.com/lttpp/Eemory/issues">here</a>.
           </div>
          </td>
         </tr>
